--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar fxLayoutAlign="space-between center">
-  <div class="logo-div" routerLink="/home">
+  <div class="logo-div bg-color-primary" routerLink="/home">
     <img src="assets/images/logo.png" alt="">
   </div>
   <div>
@@ -8,8 +8,8 @@
     <button mat-stroked-button routerLinkActive="activo" routerLink="/adoptions"><b>ADOPCIONES</b></button>
   </div>
   <div>
-    <button mat-stroked-button routerLinkActive="activo" (click)="login_SignUp('login')"><b>INGRESAR</b></button>
+    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('login')"><b>INGRESAR</b></button>
     <b>|</b>
-    <button mat-stroked-button routerLinkActive="activo" (click)="login_SignUp('signup')"><b>REGISTRARSE</b></button>
+    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('signup')"><b>REGISTRARSE</b></button>
   </div>
 </mat-toolbar>
