--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,16 @@
-<mat-toolbar color="accent">Footer</mat-toolbar>
+<div class="mainDiv" fxLayoutAlign="space-evenly center">
+  <div fxFlex="45" fxFlexOffset="15">
+    <h1>Contactate con nosotros</h1>
+    <p>Tel: 0299-155654321</p>
+    <p>Email: email@email.com.net</p>
+  </div>
+  <div fxLayout="column" fxLayoutAlign="center center" fxFlex="45">
+    <h1>¡Seguínos!</h1>
+    <div>
+      <img src="assets/images/fb_icon.png" alt="" />
+      <img src="assets/images/ig_icon.png" alt="" />
+      <img src="assets/images/twt_icon.png" alt="" />
+    </div>
+  </div>
+</div>
+<p class="by text-muted">By &lt; PeChi Code /&gt; &hearts;</p>
