--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div>
+  <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
+    <h1>HAZ UN NUEVO AMIGO</h1>
+    <p>ENCONTRÁ PERSONAS QUE ADOPTAN MASCOTAS EN LA REGIÓN</p>
+    <button mat-raised-button color="primary">Ver más</button>
+  </div>
+  <img src="assets/images/pets1.1.png" alt="" />
+</div>
+<div>
+  <img src="assets/images/pets2.png" alt="" />
+  <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
+    <h1>ENCONTRÁ A TU MASCOTA PERDIDA</h1>
+    <p>ENCONTRÁ PERSONAS QUE ADOPTAN MASCOTAS EN LA REGIÓN</p>
+    <button mat-raised-button color="primary">Ver más</button>
+  </div>
+</div>
+<div>
+  <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
+    <h1>AYUDÁ A LOS ANIMALES</h1>
+    <p>COLABORÁ PARA SALVAR VIDAS OFRECIENDO UN HOGAR TRANSITORIO</p>
+    <button mat-raised-button color="primary">Ver más</button>
+  </div>
+  <img src="assets/images/pets3.png" alt="" />
+</div>
