--- a/src/assets/styles/scss/commons.scss
+++ b/src/assets/styles/scss/commons.scss
@@ -1,5 +1,13 @@
+.color-primary {
+  color: #1f4679 !important;
+}
+
 .bg-color-primary {
-  background-color: #1f4679;
+  background-color: #1f4679 !important;
+}
+
+.bg-color-secondary {
+  background-color: #ffd273 !important;
 }
 
 .m-0 {
