probando última vista

--- a/src/app/views/adoptions/adoptions.component.html
+++ b/src/app/views/adoptions/adoptions.component.html
@@ -1,1 +1,23 @@
-<p>adoptions works!</p>
+<div fxLayoutAlign="center start" fxLayout="row wrap">
+  <div>
+    <h1 fxFlex="100">AVISOS DE ADOPCIONES</h1>
+  </div>
+
+  <div id="list" fxFlex="70" fxLayout="row" fxLayoutAlign="space-between center">
+    <div matRipple class="div-icon">
+      <mat-icon color="primary">arrow_back_ios</mat-icon>
+    </div>
+    <div id="div1" class="elem">
+        <img fxFlex="100" src="assets/images/temp/1.png" alt="">
+    </div>
+    <div id="div2" class="elem">
+        <img fxFlex="100" src="assets/images/temp/2.png" alt="">
+    </div>
+    <div id="div3" class="elem">
+        <img fxFlex="100" src="assets/images/temp/3.png" alt="">
+    </div>
+    <div matRipple class="div-icon">
+      <mat-icon color="primary">arrow_forward_ios</mat-icon>
+    </div>
+  </div>
+</div>
