Terminadas todas las vistas

--- a/src/app/views/adoptions/adoptions.component.html
+++ b/src/app/views/adoptions/adoptions.component.html
@@ -1,20 +1,38 @@
 <div fxLayoutAlign="center start" fxLayout="row wrap">
-  <div>
-    <h1 fxFlex="100">AVISOS DE ADOPCIONES</h1>
+  <div fxFlex="100" class="text-center">
+    <h1>AVISOS DE ADOPCIONES</h1>
   </div>
 
-  <div id="list" fxFlex="70" fxLayout="row" fxLayoutAlign="space-between center">
+  <div id="list" fxFlex="90" fxLayout="row" fxLayoutAlign="space-between center">
     <div matRipple class="div-icon">
       <mat-icon color="primary">arrow_back_ios</mat-icon>
     </div>
-    <div id="div1" class="elem">
-        <img fxFlex="100" src="assets/images/temp/1.png" alt="">
+    <div id="div1" class="elem" fxLayout="column">
+      <img src="assets/images/temp/1.png" alt="" />
+      <h1>Gatito en Adopción</h1>
+      <span
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat</span
+      >
     </div>
-    <div id="div2" class="elem">
-        <img fxFlex="100" src="assets/images/temp/2.png" alt="">
+    <div id="div2" class="elem" fxLayout="column">
+      <img src="assets/images/temp/2.png" alt="" />
+      <h1>Conejo en Adopción</h1>
+      <span
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat</span
+      >
     </div>
-    <div id="div3" class="elem">
-        <img fxFlex="100" src="assets/images/temp/3.png" alt="">
+    <div id="div3" class="elem" fxLayout="column">
+      <img src="assets/images/temp/3.png" alt="" />
+      <h1>Perritos en Adopción</h1>
+      <span
+        >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat</span
+      >
     </div>
     <div matRipple class="div-icon">
       <mat-icon color="primary">arrow_forward_ios</mat-icon>
