--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,15 +1,33 @@
 <mat-toolbar fxLayoutAlign="space-between center">
-  <div class="logo-div bg-color-primary" routerLink="/home">
-    <img src="assets/images/logo.png" alt="">
+  <div matRipple class="logo-div bg-color-primary" routerLink="/home">
+    <img src="assets/images/logo.png" alt="" />
   </div>
-  <div>
+  <div fxHide.lt-md>
     <button mat-stroked-button routerLinkActive="activo" routerLink="/home"><b>INICIO</b></button>
     <button mat-stroked-button routerLinkActive="activo" routerLink="/searches"><b>BÚSQUEDAS</b></button>
     <button mat-stroked-button routerLinkActive="activo" routerLink="/adoptions"><b>ADOPCIONES</b></button>
   </div>
-  <div>
-    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('login')"><b>INGRESAR</b></button>
+  <div fxHide.lt-md>
+    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('login')">
+      <b>INGRESAR</b>
+    </button>
     <b>|</b>
-    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('signup')"><b>REGISTRARSE</b></button>
+    <button mat-stroked-button class="mat-primary" routerLinkActive="activo" (click)="login_SignUp('signup')">
+      <b>REGISTRARSE</b>
+    </button>
+  </div>
+
+  <div fxLayoutAlign="space-between center" fxHide.gt-sm>
+    <button id="mini-menu" mat-button [matMenuTriggerFor]="menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLinkActive="activo" routerLink="/home"><b>INICIO</b></button>
+      <button mat-menu-item routerLinkActive="activo" routerLink="/searches"><b>BÚSQUEDAS</b></button>
+      <button mat-menu-item routerLinkActive="activo" routerLink="/adoptions"><b>ADOPCIONES</b></button>
+      <button mat-menu-item routerLinkActive="activo" (click)="login_SignUp('login')"><b>INGRESAR</b></button>
+      <button mat-menu-item routerLinkActive="activo" (click)="login_SignUp('signup')"><b>REGISTRARSE</b></button>
+    </mat-menu>
   </div>
 </mat-toolbar>
