--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,24 +1,27 @@
-<div>
+<div fxLayout.lt-sm="column">
   <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
     <h1>HAZ UN NUEVO AMIGO</h1>
     <p>ENCONTRÁ PERSONAS QUE ADOPTAN MASCOTAS EN LA REGIÓN</p>
+    <img id="img1" fxHide.gt-sm src="assets/images/pets1.1.png" alt="" />
     <button mat-raised-button color="primary">Ver más</button>
   </div>
-  <img src="assets/images/pets1.1.png" alt="" />
+  <img fxHide.lt-sm src="assets/images/pets1.1.png" alt="" />
 </div>
-<div>
-  <img src="assets/images/pets2.png" alt="" />
+<div fxLayout.lt-sm="column">
+  <img fxHide.lt-sm src="assets/images/pets2.png" alt="" />
   <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
     <h1>ENCONTRÁ A TU MASCOTA PERDIDA</h1>
     <p>ENCONTRÁ PERSONAS QUE ADOPTAN MASCOTAS EN LA REGIÓN</p>
+    <img id="img2" fxHide.gt-sm src="assets/images/pets2.png" alt="" />
     <button mat-raised-button color="primary">Ver más</button>
   </div>
 </div>
-<div>
+<div fxLayout.lt-sm="column">
   <div fxFlex="50" fxLayout="column" fxLayoutAlign="center center">
     <h1>AYUDÁ A LOS ANIMALES</h1>
     <p>COLABORÁ PARA SALVAR VIDAS OFRECIENDO UN HOGAR TRANSITORIO</p>
+    <img id="img3" fxHide.gt-sm src="assets/images/pets3.png" alt="" />
     <button mat-raised-button color="primary">Ver más</button>
   </div>
-  <img src="assets/images/pets3.png" alt="" />
+  <img fxHide.lt-sm src="assets/images/pets3.png" alt="" />
 </div>
