--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,10 @@
-<div class="mainDiv" fxLayoutAlign="space-evenly center">
+<div class="mainDiv" fxLayoutAlign="space-evenly center" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm="start center">
   <div fxFlex="45" fxFlexOffset="15">
     <h1>Contactate con nosotros</h1>
     <p>Tel: 0299-155654321</p>
     <p>Email: email@email.com.net</p>
   </div>
-  <div fxLayout="column" fxLayoutAlign="center center" fxFlex="45">
+  <div fxLayout.gt-sm="column" fxLayoutAlign="center center" fxFlex="45">
     <h1>¡Seguínos!</h1>
     <div>
       <img src="assets/images/fb_icon.png" alt="" />
