--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -26,3 +26,14 @@ p {
   font-size: 15px;
   margin: 0;
 }
+@media (max-width: 599px) {
+  h1 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+  img {
+    max-width: 36px;
+  }
+}
