--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -10,7 +10,7 @@ main {
 
 .content {
   flex: 1;
-  margin-top:145px;
+  margin-top: 145px;
   padding: 0;
 }
 
@@ -29,4 +29,10 @@ app-footer {
   right: 0;
   left: 0;
   z-index: 999;
+}
+
+@media (max-width: 599px) {
+  .content {
+    margin-top: 70px;
+  }
 }
