--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/styles/scss/commons.scss';
 
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 html,
 body {
   height: 100%;
