--- a/src/app/views/searches/searches.component.html
+++ b/src/app/views/searches/searches.component.html
@@ -1,6 +1,7 @@
 <div class="bg-color-primary barra mt-1" fxLayoutAlign="start center">
   <span fxFlex="2"></span>
-  <button mat-stroked-button (click)="openModalNew()">Agregar</button>
+  <button mat-stroked-button routerLink="/newsearch">Agregar</button>
+  
 </div>
 <div fxLayoutAlign="start stretch" fxLayout.lt-sm="column">
   <div fxFlex="30" class="bg-color-secondary" fxLayout="column">
