--- a/src/app/views/new-search/new-search.component.scss
+++ b/src/app/views/new-search/new-search.component.scss
@@ -1,10 +1,17 @@
-mat-dialog-content {
-  overflow: scroll !important;
-}
-
 h3 {
   color: white;
 }
 input[type='file'] {
   display: none;
+}
+.barra {
+  height: 65px;
+}
+.mat-stroked-button {
+  border-color: white !important;
+  color: white;
+}
+
+.mat-form-field {
+  width: 45%;
 }
